2002-11-07 Craig Franklin <craigfranklin@attbi.com>
  * Added support for sx, 17xx, and 18xx devices in gpdasm.
  * Fixed config directive for 18xx devices with address > 0x300007

2002-10-27 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.10.5 Released.

2002-10-19 Craig Franklin <craigfranklin@attbi.com>
  * Added new processors: 12f629 12f675 16c557 16f627a 16f628a 16f630 
    16f676 16f72 16f76 16f77 16f818 16f819 16f87 16f873a 16f874a 16f876a 
    16f88 18f1220 18f1320 18f2220 18f2320 18f4220 18f4320 18f6620 18f6720 
    18f8620 18f8720 rf509af rf509ag
  * Updated header files

2002-10-12 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.10.4 Released.
  * Fixed bug that caused assertion when macro calls procede definition.
  * Fixed bug that required gpasm arguments be in a specific order.
  * Moved opcode definitions into libgputils for future gpdasm improvments.
  * Fixed bug that prevented conditional assembly directives in column 1 to be
    missed if assembly had been previously disabled.
  * Generate an error if endm is missing from a macro definition.
  * Increased gpvc file number limit from 20 to 100.

2002-08-18 Scott Dattalo <scott@dattalo.com>
  * gpasm - arithmetic for negative relative branches on a 16bit core
    was loosing the sign bit.
	
2002-05-12 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.10.3 Released.

2002-04-27 Craig Franklin <craigfranklin@attbi.com>
  * Added Code Warrior changes. 

2002-04-09 Craig Franklin <craigfranklin@attbi.com>
  * Updated header files and linker scripts. 
  * Added manpages.

2002-04-08 Craig Franklin <craigfranklin@attbi.com>
  * Fixed error that could cause a seg fault on AmigaOS.
  
2002-04-03 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.10.2 Released.
  * Any argument to an instruction which exceeds its range will now generate
    at least a warning.
  * Bank warnings are now generated for access to register files that aren't 
    in bank 0.